--- a/index.html
+++ b/index.html
@@ -3,94 +3,185 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Northeast Disability Advocates | We Finish the Fight</title>
+    <title>Northeast Disability Advocates | National SSDI Experts</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     <style>
-        .navy { background-color: #000080; }
-        .gold { color: #FCD816; }
-        .bg-gold { background-color: #FCD816; }
-        .border-gold { border-color: #FCD816; }
+        @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700;900&family=Playfair+Display:ital,wght@0,700;1,700&display=swap');
+        :root { --navy: #000080; --gold: #FCD816; }
+        .font-serif { font-family: 'Playfair+Display', serif; }
+        .bg-navy { background-color: var(--navy); }
+        .text-gold { color: var(--gold); }
+        .bg-gold { background-color: var(--gold); }
+        .hover-gold:hover { background-color: #e5c614; }
+        .glass { background: rgba(255, 255, 255, 0.95); backdrop-filter: blur(10px); }
     </style>
 </head>
-<body class="bg-slate-50 font-sans text-slate-900">
+<body class="bg-slate-50 font-['Inter'] text-slate-900 selection:bg-gold selection:text-navy">
 
-    <header class="navy text-white py-24 px-6 border-b-8 border-gold">
-        <div class="max-w-5xl mx-auto text-center">
-            <h1 class="text-6xl font-black tracking-tighter mb-6">NORTHEAST <span class="gold">DISABILITY</span> ADVOCATES</h1>
-            <p class="text-2xl italic opacity-90 mb-10">"We Finish the Fight."</p>
-            <div class="flex justify-center">
-                <a href="mailto:northeastdisability@gmail.com" class="bg-gold text-[#000080] px-10 py-5 rounded-md font-bold uppercase tracking-widest hover:scale-105 transition-transform shadow-2xl">Free Case Evaluation</a>
+    <nav class="sticky top-0 z-50 glass border-b border-slate-200">
+        <div class="max-w-7xl mx-auto px-6 py-4 flex justify-between items-center">
+            <div class="font-black text-xl tracking-tighter text-[#000080]">
+                NORTHEAST <span class="text-slate-400">DISABILITY</span>
+            </div>
+            <div class="hidden md:flex gap-8 text-sm font-bold uppercase tracking-widest text-slate-600">
+                <a href="#intelligence" class="hover:text-navy transition">ALJ Intelligence</a>
+                <a href="#concierge" class="hover:text-navy transition">Client Concierge</a>
+                <a href="#team" class="hover:text-navy transition">The Experts</a>
+            </div>
+            <a href="tel:8605550199" class="bg-navy text-white px-5 py-2 rounded font-bold text-sm">860.555.0199</a>
+        </div>
+    </nav>
+
+    <header class="relative bg-navy text-white overflow-hidden">
+        <div class="absolute inset-0 opacity-10 bg-[url('https://www.transparenttextures.com/patterns/carbon-fibre.png')]"></div>
+        <div class="max-w-7xl mx-auto px-6 py-32 relative z-10 grid md:grid-cols-2 gap-12 items-center">
+            <div>
+                <span class="inline-block bg-gold text-navy px-3 py-1 rounded text-xs font-black uppercase tracking-tighter mb-6">Nationwide Representation</span>
+                <h1 class="text-6xl lg:text-7xl font-black leading-tight mb-6">We Finish <br><span class="text-gold italic font-serif">the Fight.</span></h1>
+                <p class="text-xl text-slate-300 mb-10 max-w-lg leading-relaxed">Systematic, data-driven disability advocacy. We don't just file papers; we build unassailable cases using advanced ALJ intelligence.</p>
+                <div class="flex flex-col sm:flex-row gap-4">
+                    <button class="bg-gold text-navy px-10 py-5 rounded-md font-black uppercase tracking-widest hover:scale-105 transition shadow-xl">Get Case Evaluation</button>
+                    <div class="flex items-center gap-4 px-6 text-sm font-bold opacity-80">
+                        <i class="fas fa-shield-alt text-gold text-2xl"></i>
+                        <span>EDPNA Certified <br>+ JD Powered</span>
+                    </div>
+                </div>
+            </div>
+            <div class="hidden md:block relative">
+                <div class="absolute -inset-4 border-2 border-gold/30 rounded-xl translate-x-4 translate-y-4"></div>
+                <img src="https://images.unsplash.com/photo-1589829545856-d10d557cf95f?auto=format&fit=crop&w=800&q=80" class="rounded-xl shadow-2xl relative z-10 grayscale hover:grayscale-0 transition duration-700" alt="Legal Building">
             </div>
         </div>
     </header>
 
-    <section class="py-16 px-6">
-        <div class="max-w-4xl mx-auto">
-            <h2 class="text-3xl font-bold text-[#000080] text-center mb-4">Transparent Intelligence</h2>
-            <p class="text-center text-slate-600 mb-10">We track quarterly approval rates to build judge-specific strategies.</p>
+    <section id="intelligence" class="py-24 px-6">
+        <div class="max-w-7xl mx-auto">
+            <div class="flex flex-col md:flex-row justify-between items-end mb-16 gap-8">
+                <div class="max-w-2xl">
+                    <h2 class="text-navy text-4xl font-black mb-4 uppercase tracking-tighter">Transparent Intelligence</h2>
+                    <p class="text-slate-600">Most firms hide judge data. We weaponize it. We track every Hartford & New Haven ALJ's quarterly approval rates to customize your hearing brief.</p>
+                </div>
+                <div class="bg-navy p-6 rounded-lg text-white">
+                    <p class="text-3xl font-black text-gold">46%</p>
+                    <p class="text-xs uppercase font-bold opacity-60">Variance between CT Judges</p>
+                </div>
+            </div>
             
-            <div class="overflow-hidden rounded-lg shadow-lg border border-slate-200 bg-white">
-                <table class="w-full text-left border-collapse">
-                    <thead class="navy text-white text-sm uppercase">
-                        <tr>
-                            <th class="py-4 px-6">Assigned Judge (Hartford)</th>
-                            <th class="py-4 px-6">Approval Rate</th>
-                            <th class="py-4 px-6">NDA Prep Tier</th>
-                        </tr>
-                    </thead>
-                    <tbody class="divide-y divide-slate-200">
-                        <tr>
-                            <td class="py-4 px-6 font-semibold">Judge Lemoine</td>
-                            <td class="py-4 px-6 text-green-600 font-bold">82%</td>
-                            <td class="py-4 px-6 text-xs uppercase font-bold text-slate-500">Standard Prep</td>
-                        </tr>
-                        <tr>
-                            <td class="py-4 px-6 font-semibold">Judge Noel</td>
-                            <td class="py-4 px-6 text-green-600 font-bold">73%</td>
-                            <td class="py-4 px-6 text-xs uppercase font-bold text-slate-500">Standard Prep</td>
-                        </tr>
-                        <tr>
-                            <td class="py-4 px-6 font-semibold">Judge Thomas</td>
-                            <td class="py-4 px-6 text-orange-500 font-bold">40%</td>
-                            <td class="py-4 px-6 text-xs uppercase font-bold text-slate-500">Maximum Prep</td>
-                        </tr>
-                        <tr>
-                            <td class="py-4 px-6 font-semibold">Judge Molleur</td>
-                            <td class="py-4 px-6 text-red-600 font-bold">36%</td>
-                            <td class="py-4 px-6 text-xs uppercase font-bold text-slate-500">Maximum Prep</td>
-                        </tr>
-                    </tbody>
-                </table>
-            </div>
-            <p class="mt-4 text-xs text-slate-400 text-center uppercase tracking-widest italic">Source: SSA ALJ Disposition Data FY 2024</p>
-        </div>
-    </section>
-
-    <section class="bg-white py-20 px-6 border-y border-slate-200">
-        <div class="max-w-5xl mx-auto grid md:grid-cols-3 gap-12">
-            <div class="text-center">
-                <div class="text-4xl mb-4">⚖️</div>
-                <h3 class="text-xl font-black text-[#000080] mb-2 uppercase">EDPNA + J.D.</h3>
-                <p class="text-slate-600 text-sm">Federally certified expertise combined with federal court litigation power.</p>
-            </div>
-            <div class="text-center">
-                <div class="text-4xl mb-4">🏁</div>
-                <h3 class="text-xl font-black text-[#000080] mb-2 uppercase">Victory Protocol</h3>
-                <p class="text-slate-600 text-sm">We don't stop at the win. We guide you through the Medicare and back-pay transition.</p>
-            </div>
-            <div class="text-center">
-                <div class="text-4xl mb-4">🇺🇸</div>
-                <h3 class="text-xl font-black text-[#000080] mb-2 uppercase">National Scale</h3>
-                <p class="text-slate-600 text-sm">Social Security law is federal. We represent claimants in all 50 states.</p>
+            <div class="grid lg:grid-cols-3 gap-8">
+                <div class="lg:col-span-2 overflow-hidden rounded-xl shadow-2xl border border-slate-200 bg-white">
+                    <table class="w-full text-left">
+                        <thead class="bg-slate-100 text-navy text-xs uppercase font-black tracking-widest">
+                            <tr>
+                                <th class="py-5 px-8">Hartford ALJ</th>
+                                <th class="py-5 px-8 text-center">Approval Rate</th>
+                                <th class="py-5 px-8">Strategic Preparation</th>
+                            </tr>
+                        </thead>
+                        <tbody class="text-sm">
+                            <tr class="hover:bg-slate-50 transition border-b border-slate-100">
+                                <td class="py-5 px-8 font-bold text-navy">Judge Lemoine</td>
+                                <td class="py-5 px-8 text-center text-green-600 font-black">82%</td>
+                                <td class="py-5 px-8"><span class="bg-green-100 text-green-700 px-3 py-1 rounded-full text-xs font-bold uppercase">Standard Prep</span></td>
+                            </tr>
+                            <tr class="hover:bg-slate-50 transition border-b border-slate-100">
+                                <td class="py-5 px-8 font-bold text-navy">Judge Noel</td>
+                                <td class="py-5 px-8 text-center text-green-600 font-black">73%</td>
+                                <td class="py-5 px-8"><span class="bg-green-100 text-green-700 px-3 py-1 rounded-full text-xs font-bold uppercase">Standard Prep</span></td>
+                            </tr>
+                            <tr class="hover:bg-slate-50 transition border-b border-slate-100">
+                                <td class="py-5 px-8 font-bold text-navy">Judge Sweeney</td>
+                                <td class="py-5 px-8 text-center text-orange-500 font-black">53%</td>
+                                <td class="py-5 px-8"><span class="bg-orange-100 text-orange-700 px-3 py-1 rounded-full text-xs font-bold uppercase">Enhanced Prep</span></td>
+                            </tr>
+                            <tr class="hover:bg-slate-50 transition border-b border-slate-100">
+                                <td class="py-5 px-8 font-bold text-navy">Judge Molleur</td>
+                                <td class="py-5 px-8 text-center text-red-600 font-black">36%</td>
+                                <td class="py-5 px-8"><span class="bg-red-100 text-red-700 px-3 py-1 rounded-full text-xs font-bold uppercase">Maximum Prep</span></td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+                <div class="bg-navy text-white p-10 rounded-xl flex flex-col justify-center border-b-8 border-gold">
+                    <h3 class="text-2xl font-black mb-6">Preparation Tiers</h3>
+                    <ul class="space-y-6 text-sm">
+                        <li class="flex gap-4">
+                            <i class="fas fa-check text-gold mt-1"></i>
+                            <span><strong>Standard:</strong> Focus on RFC forms and treating physician opinions.</span>
+                        </li>
+                        <li class="flex gap-4">
+                            <i class="fas fa-check text-gold mt-1"></i>
+                            <span><strong>Enhanced:</strong> Deep-dive Step 4 analysis of past relevant work.</span>
+                        </li>
+                        <li class="flex gap-4">
+                            <i class="fas fa-check text-gold mt-1"></i>
+                            <span><strong>Maximum:</strong> Step 5 VE cross-examination and Grid Rule pivots.</span>
+                        </li>
+                    </ul>
+                </div>
             </div>
         </div>
     </section>
 
-    <footer class="navy text-white py-12 px-6 text-center">
-        <div class="max-w-5xl mx-auto border-t border-white/10 pt-8">
-            <p class="font-bold mb-2">NORTHEAST DISABILITY ADVOCATES, LLC</p>
-            <p class="text-slate-400 text-sm mb-6">Hartford, Connecticut | Serving Nationwide</p>
-            <a href="www.northeastdisability.com" class="gold text-sm underline">www.NortheastDisability.com</a>
+    <section id="concierge" class="bg-slate-900 py-24 px-6 relative overflow-hidden">
+        <div class="max-w-5xl mx-auto relative z-10 text-center">
+            <h2 class="text-gold text-4xl font-black mb-8 tracking-tighter">UNREASONABLE HOSPITALITY</h2>
+            <p class="text-slate-400 text-xl mb-16 max-w-3xl mx-auto">The 18-month wait for a disability hearing is the hardest time of your life. While other firms disappear, we stay in the fight with you.</p>
+            
+            <div class="grid md:grid-cols-2 gap-8 text-left">
+                <div class="bg-white/5 p-8 rounded-xl border border-white/10 hover:border-gold/50 transition">
+                    <i class="fas fa-home text-gold text-3xl mb-6"></i>
+                    <h4 class="text-white text-xl font-bold mb-4">Housing Stability</h4>
+                    <p class="text-slate-400">Our Concierge assists with rental assistance applications and emergency shelter connections to keep you safe during the wait.</p>
+                </div>
+                <div class="bg-white/5 p-8 rounded-xl border border-white/10 hover:border-gold/50 transition">
+                    <i class="fas fa-apple-alt text-gold text-3xl mb-6"></i>
+                    <h4 class="text-white text-xl font-bold mb-4">Nutrition Access</h4>
+                    <p class="text-slate-400">Direct help applying for SNAP (food stamps) and locating local food banks so you can focus on your health, not your next meal.</p>
+                </div>
+                <div class="bg-white/5 p-8 rounded-xl border border-white/10 hover:border-gold/50 transition">
+                    <i class="fas fa-pills text-gold text-3xl mb-6"></i>
+                    <h4 class="text-white text-xl font-bold mb-4">Medical Continuity</h4>
+                    <p class="text-slate-400">We help navigate Medicaid enrollment and sliding-scale specialists. Better care means better evidence, which leads to a win.</p>
+                </div>
+                <div class="bg-white/5 p-8 rounded-xl border border-white/10 hover:border-gold/50 transition">
+                    <i class="fas fa-trophy text-gold text-3xl mb-6"></i>
+                    <h4 class="text-white text-xl font-bold mb-4">The Victory Protocol</h4>
+                    <p class="text-slate-400">We don't stop at the win. We guide you through your first check, Medicare transition, and back-pay logistics.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <footer class="bg-white py-20 px-6 border-t border-slate-200">
+        <div class="max-w-7xl mx-auto flex flex-col md:flex-row justify-between items-start gap-12">
+            <div>
+                <div class="font-black text-2xl tracking-tighter text-navy mb-4">
+                    NORTHEAST <span class="text-slate-300">DISABILITY</span>
+                </div>
+                <p class="text-slate-500 text-sm max-w-xs">A nationwide federal practice headquartered in Hartford, Connecticut. We Finish the Fight.</p>
+            </div>
+            <div class="grid grid-cols-2 gap-20">
+                <div>
+                    <h5 class="font-black uppercase text-xs tracking-widest text-slate-400 mb-6">Navigation</h5>
+                    <ul class="text-sm font-bold space-y-4 text-navy">
+                        <li><a href="#" class="hover:text-gold transition">ALJ Data</a></li>
+                        <li><a href="#" class="hover:text-gold transition">Our Process</a></li>
+                        <li><a href="#" class="hover:text-gold transition">Contact</a></li>
+                    </ul>
+                </div>
+                <div>
+                    <h5 class="font-black uppercase text-xs tracking-widest text-slate-400 mb-6">Legal</h5>
+                    <ul class="text-sm font-bold space-y-4 text-navy">
+                        <li><a href="#" class="hover:text-gold transition">Privacy Policy</a></li>
+                        <li><a href="#" class="hover:text-gold transition">Disclaimer</a></li>
+                        <li><a href="#" class="hover:text-gold transition">Sitemap</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <div class="max-w-7xl mx-auto mt-20 pt-8 border-t border-slate-100 text-center text-xs text-slate-400 uppercase font-black tracking-widest">
+            &copy; 2026 Northeast Disability Advocates, LLC | All Rights Reserved
         </div>
     </footer>
 
